<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OiSHii</string>
    <string name="signin">Sign In</string>
    <string name="createacc">Create Account</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">New Customer</string>
    <string name="btn_today_menu">View todays menu</string>
    <string name="mnu_about">Home</string>
    <string name="mnu_offer">Offers</string>
    <string name="mnu_history">History</string>
    <string name="mnu_myacc">Account</string>
    <string name="mnu_basket">Basket</string>
    <!-- Loading dialog messages -->
    <string name="loading_mnu">Loading today\'s menu…</string>
    <string name="loading_offers">Loading Special Offers…</string>
    <string name="loading_register">Creating Account…</string>
    <string name="loading_login">Signing In…</string>
    <string name="loading_acc">Obtaining Account Info…</string>
    <string name="loading_chg_pwd">Changing Password…</string>
    <string name="loading_det">Loading menu details…</string>
    <string name="loading_history">Loading history…</string>
    <string name="loading">Loading details…</string>
    <string name="loading_save">Saving details…</string>
    <string name="loading_add_location">Adding Location…</string>
    <string name="loading_delivery_time">Loading delivery time…</string>
    <string name="loading_del_address">Deleting address…</string>
    <string name="loading_edit_address">Edit address…</string>
    <string name="loading_promo_code">Processing promotional code…</string>
    <string name="loading_validate">Validating your order…</string>
     <string name="loading_processing">Processing your order…</string>
     <string name="loading_directing">Directing to payment gateway…</string>
      <string name="loading_gallery">Loading menu gallery…</string>
    <!--  -->
    <string name="error_bad_response">Invalid server response</string>
    <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
    <string name="signtocontinue">You need to sign in to continue.</string>
    <string name="field_title">Title</string>
    <string name="field_first_name">First Name</string>
    <string name="field_last_name">Last Name</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_reppassword">Confirm</string>
    <string name="field_company">Company</string>
    <string name="field_floor">Floor</string>
    <string name="field_address">Address</string>
    <string name="field_city">City</string>
    <string name="field_postcode">Post Code</string>
    <string name="field_mobile">Mobile</string>
    <string name="field_shipping">Shipping</string>
    <string name="field_billing">Billing</string>
    <string name="field_use">Use for</string>

    <!-- General -->
     <string name="save_cc">Save new payment details</string>
    <string name="items_text">ITEMS</string>
    <string name="no_orders">No Orders</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="free">FREE</string>
    <string name="basket_noitems">No Items in Basket</string>
    <string name="dismiss">CLOSE</string>
    <string name="current">Current</string>
    <string name="new_text">New</string>
    <string name="chngpwd">Change Password</string>
    <string name="details">MORE INFO</string>
    <string name="price">Price:</string>
    <string name="enter_promo">Enter promotional code:</string>
    <string name="hint_promo">Promotional code</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_SelTime">Select Time</string>
    <string name="btn_save">Save</string>
    <string name="btn_add">Add Location</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_apply_promo">Apply promotional code</string>
    <string name="btn_gtocheck">Go to checkout</string>
    <string name="btn_editlocation">Edit Location</string>
    <string name="btn_deltime">Set Delivery Time</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="btn_no_saved">Use alternate payment</string>
    <string name="sold_out">Sold Out</string>
    <string name="add_basket">ADD TO ORDER</string>
    <string name="no_loc">No locations saved,Please add a location.</string>
    <string name="no_cards">No cards saved!</string>
    <string name="items">MY ITEMS</string>
    <string name="calcs">CALCULATIONS</string>
    <string name="billingdelivery">Billing address is the same as delivery address</string>
    <!-- SCREEN TITLES -->
    <string name="checkout">BASKET</string>
    <string name="special">SPECIAL</string>
    <string name="offers">OFFERS</string>
    <string name="today">TODAYS</string>
    <string name="menu">MENU</string>
    <string name="acc_title">MY ACCOUNT</string>
    <string name="create_acc_title">CREATE ACCOUNT</string>
    <string name="login_title">SIGN IN</string>
    <string name="title_chng_pwd">CHANGE PASSWORD</string>
    <string name="title_history">HISTORY</string>
    <string name="title_details">MY DETAILS</string>
    <string name="title_locations">MY LOCATIONS</string>
    <string name="title_sc">SAVED CARDS</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="title_check_del">DELIVERY TIME</string>
    <string name="title_sel_ship">SHIPPING ADDRESS</string>
    <string name="title_sel_bill">BILLING ADDRESS</string>
     <string name="title_sel_payment">SELECT PAYMENT</string>
     
    <!-- My Account -->
    <string name="mydet">My Details</string>
    <string name="myloc">My Location</string>
    <string name="mypayment">Payment Details</string>
    <string name="mypwd">Change Password</string>

    <!-- Validation error messages -->
    <string name="error_no_sdcard">* No SD Card mounted!.</string>
    <string name="error_no_title">* Please enter a title.</string>
    <string name="error_no_fn">* Please enter a first name.</string>
    <string name="error_no_ln">* Please enter a last name.</string>
    <string name="error_no_email">* Please enter an email.</string>
    <string name="error_no_pwd">* Please enter a password.</string>
    <string name="error_no_rpwd">* Please repeat password.</string>
    <string name="error_invalid_email">* Please enter a valid email</string>
    <string name="error_pwd_match">* Password and confirmation do not match.</string>
    <string name="error_no_curr_pwd">* Please enter your current password.</string>
    <string name="error_no_new_pwd">* Please enter your new password.</string>
    <string name="error_no_promo">* Please enter a promotional code.</string>

</resources>