<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_border"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_company" />

            <EditText
                android:id="@+id/fld_comp"
                android:tag="Company"
                android:inputType="textCapWords"
                style="@style/fieldText" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <View style="@style/fieldSeparator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_floor" />

            <EditText
                android:id="@+id/fld_floor"
                android:tag="Floor"
                style="@style/fieldText" />
        </LinearLayout>

        <View style="@style/fieldSeparator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_address" />

            <EditText
                android:id="@+id/fld_address"
                style="@style/fieldText"
                android:tag="Address"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <View style="@style/fieldSeparator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_city" />

            <EditText
                android:id="@+id/fld_city"
                android:tag="City"
                android:inputType="textCapWords"
                style="@style/fieldText" />
        </LinearLayout>

        <View style="@style/fieldSeparator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_postcode" />

            <EditText
                android:id="@+id/fld_postcode"
                android:tag="Post Code"
                style="@style/fieldText" />
        </LinearLayout>

        <View style="@style/fieldSeparator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_mobile" />

            <EditText
                android:id="@+id/fld_mobile"
                style="@style/fieldText"
                android:tag="Mobile number"
                android:inputType="phone" />
        </LinearLayout>

        <View style="@style/fieldSeparator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                style="@style/fieldLabel"
                android:text="@string/field_use"
                android:layout_gravity="center_vertical" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioBill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_billing"
                    android:paddingLeft="35dp" 
                    android:textColor="@color/text_color" 
                     android:tag="B"/>

                <RadioButton
                    android:id="@+id/radioShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_shipping"
                    android:textColor="@color/text_color"
                     android:tag="S" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAddLocation"
        style="@style/primary_btn"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/btn_add" />

</LinearLayout>