<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signtocontinue"
        android:textColor="@color/text_color"
        style="@style/buttonShadow"
        android:textSize="17sp" />

    <Button
        android:id="@+id/signIn"
        style="@style/primary_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dp"
        android:text="@string/signin" />

    <Button
        android:id="@+id/createAccount"
        style="@style/primary_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dp"
        android:text="@string/createacc" />

</LinearLayout>