<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke_border"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/myAccDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/accountdetailsText"
                    android:text="@string/mydet" />

                <ImageView style="@style/accountdetailsImage" />
            </RelativeLayout>

            <View style="@style/fieldSeparator" />

            <RelativeLayout
                android:id="@+id/myAccLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/accountdetailsText"
                    android:text="@string/myloc" />

                <ImageView style="@style/accountdetailsImage" />
            </RelativeLayout>

            <View style="@style/fieldSeparator" />

            <RelativeLayout
                android:id="@+id/myAccPayment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/accountdetailsText"
                    android:text="@string/mypayment" />

                <ImageView style="@style/accountdetailsImage" />
            </RelativeLayout>

            <View style="@style/fieldSeparator" />

            <RelativeLayout
                
                android:id="@+id/myAccPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/accountdetailsText"
                    android:text="@string/mypwd"
                     />

                <ImageView style="@style/accountdetailsImage" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>