<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke_border"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" >

                <TextView
                    style="@style/fieldLabel"
                    android:text="@string/field_title" />

                <EditText
                    android:id="@+id/editText1"
                    style="@style/fieldText" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@drawable/field_separator" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" >

                <TextView
                    style="@style/fieldLabel"
                    android:text="@string/field_first_name" />

                <EditText
                    android:id="@+id/fld_FirstName"
                    style="@style/fieldText" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@drawable/field_separator" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" >

                <TextView
                    style="@style/fieldLabel"
                    android:text="@string/field_last_name" />

                <EditText
                    android:id="@+id/fld_LastName"
                    style="@style/fieldText" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@drawable/field_separator" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" >

                <TextView
                    style="@style/fieldLabel"
                    android:text="@string/field_email"
                    />

                <EditText
                    android:id="@+id/fld_Email"
                    android:inputType="textEmailAddress"
                    style="@style/fieldText" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@drawable/field_separator" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" >

                <TextView
                    style="@style/fieldLabel"
                    android:text="@string/field_password" />

                <EditText
                    android:id="@+id/fld_Password"
                    style="@style/fieldText"
                    android:inputType="textPassword" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@drawable/field_separator" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" >

                <TextView
                    style="@style/fieldLabel"
                    android:text="@string/field_password" />

                <EditText
                    android:id="@+id/fld_RepPassword"
                    style="@style/fieldText"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAcc"
        style="@style/primary_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/createacc" />

</LinearLayout>