<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/progressParent"
        android:layout_width="120dp"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/imageProgress"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/menuImg"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="80"
            android:visibility="gone" />

        <TextView
            android:id="@+id/left"
            style="@style/sploffers_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:layout_weight="20"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="75"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="left" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Ldg"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddBasket"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="3dp"
            android:paddingRight="20dp"
            style="@style/primary_btn"
            android:gravity="center_horizontal"
            android:text="@string/add_basket"
            android:textSize="13dp" />

        <Button
            android:id="@+id/detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_menu_selector"
            android:paddingRight="20dp"
            android:text="@string/details"
            android:textColor="@android:color/white"
            android:textSize="13dp" />
    </LinearLayout>

</LinearLayout>